--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,13 +1,28 @@
+<!-- In public/index.html -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Agency Frontend</title>
+    <title>Your App</title>
+    
+    <!-- Bootstrap CSS via CDN -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1MvWoI76PWKp40J"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <div id="root"></div>
-    <!-- The React app will be injected here by React -->
+
+    <!-- Bootstrap JavaScript via CDN -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+isPz0I1WVIdEWl5Hfww4wRo2eR5p"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
