--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,4 +1,3 @@
-<!-- In public/index.html -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -14,6 +13,9 @@
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1MvWoI76PWKp40J"
       crossorigin="anonymous"
     />
+    
+    <!-- Chart.js via CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </head>
   <body>
     <div id="root"></div>
